--- a/数据机构与算法c语言描述.vcxproj.filters
+++ b/数据机构与算法c语言描述.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="CircularLinkedList.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="DoubleLinkList.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SequenceList.h">
@@ -48,6 +51,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="CircularLinkedList.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DoubleLinkList.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
