--- a/数据机构与算法c语言描述.vcxproj
+++ b/数据机构与算法c语言描述.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="algorithm.c" />
     <ClCompile Include="CircularLinkedList.c" />
     <ClCompile Include="DoubleLinkList.c" />
+    <ClCompile Include="LinkedStack.c" />
     <ClCompile Include="SequenceStack.c" />
     <ClCompile Include="SinglyLinkedList.c" />
     <ClCompile Include="SequenceList.c" />
@@ -140,6 +141,7 @@
     <ClInclude Include="algorithm.h" />
     <ClInclude Include="CircularLinkedList.h" />
     <ClInclude Include="DoubleLinkList.h" />
+    <ClInclude Include="LinkedStack.h" />
     <ClInclude Include="StaticLinkedList.h">
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">CompileAsC</CompileAs>
     </ClInclude>
