--- a/数据机构与算法c语言描述.vcxproj.filters
+++ b/数据机构与算法c语言描述.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="SequenceStack.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="LinkedStack.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SequenceList.h">
@@ -60,6 +63,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="SequenceStack.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedStack.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
