--- a/数据机构与算法c语言描述.vcxproj.filters
+++ b/数据机构与算法c语言描述.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="LinkedStack.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="LinkedQueue.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SequenceList.h">
@@ -66,6 +69,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="LinkedStack.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedQueue.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
